Fix namespace in tasks and templates
Signed-off-by: Wayne Sun <gsun@redhat.com>

--- a/roles/reportportal/tasks/deploy_minio.yml
+++ b/roles/reportportal/tasks/deploy_minio.yml
@@ -18,7 +18,7 @@
         labels:
           app: minio
         name: minio
-        namespace: "{{ namespace }}"
+        namespace: "{{ meta.namespace }}"
       data:
         initialize: "{{ lookup('template', '_helper_create_bucket.txt') | string }}"
 
