--- a/deploy/olm-catalog/reportportal-operator/0.0.1/reportportal-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/reportportal-operator/0.0.1/reportportal-operator.clusterserviceversion.yaml
@@ -40,6 +40,58 @@ spec:
       name: reportportals.rp5.reportportal.io
       version: v1alpha1
       displayName: ReportPortal v5
+      resources:
+      - kind: Pods
+        name: ""
+        version: v1
+      - kind: ConfigMaps
+        name: ""
+        version: v1
+      - kind: ReportPortals
+        name: reportportals.rp5.reportportal.io
+        version: v1alpha1
+      - kind: ReplicaSets
+        name: ""
+        version: v1
+      - kind: Deployments
+        name: ""
+        version: v1
+      - kind: Services
+        name: ""
+        version: v1
+      specDescriptors:
+      - description: Clustser default sub domain hostname for the apps,
+          if specified route will be created with $namespace-reportportal.$app_domain.
+        displayName: App route base domain name
+        path: app_domain
+        x-descriptors:
+        - urn:alm:descriptor:tectonic.ui:text
+      - description: Replicas number for service-ui component
+        displayName:  RP service-ui replicas
+        path: ui_replicas
+        x-descriptors:
+        - urn:alm:descriptor:tectonic.ui:number
+      - description: Replicas number for service-api component
+        displayName:  RP service-api replicas
+        path: api_replicas
+        x-descriptors:
+        - urn:alm:descriptor:tectonic.ui:number
+      - description: Replicas number for service-index component
+        displayName:  RP service-index replicas
+        path: index_replicas
+        x-descriptors:
+        - urn:alm:descriptor:tectonic.ui:number
+      - description: Replicas number for gateway component
+        displayName:  RP gateway replicas
+        path: gateway_replicas
+        x-descriptors:
+        - urn:alm:descriptor:tectonic.ui:number
+      statusDescriptors:
+      - description: Conditions provided by deployment
+        displayName: Conditions
+        path: conditions
+        x-descriptors:
+        - urn:alm:descriptor:io.kubernetes.conditions
   description: ReportPortal is a test automation analytics platform.
     ReportPortal Operator for instantiating the Report Portal services and
     required dependencies.
