Update CR example
Update app_domain with example domain name

Signed-off-by: Wayne Sun <gsun@redhat.com>

--- a/deploy/crds/rp5.reportportal.io_v1alpha1_reportportal_cr.yaml
+++ b/deploy/crds/rp5.reportportal.io_v1alpha1_reportportal_cr.yaml
@@ -4,8 +4,8 @@ metadata:
   name: example-reportportal
 spec:
   # You cluster default router hostname
-  app_domain:
-  ui_replicas: 3
-  api_replicas: 3
-  index_replicas: 3
-  gateway_replicas: 3
+  app_domain: apps.test-example.com
+  ui_replicas: 1
+  api_replicas: 1
+  index_replicas: 1
+  gateway_replicas: 1
