--- a/deploy/olm-catalog/reportportal-operator/0.0.1/reportportal-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/reportportal-operator/0.0.1/reportportal-operator.clusterserviceversion.yaml
@@ -11,11 +11,11 @@ metadata:
             "name": "example-reportportal"
           },
           "spec": {
-            "api_replicas": 3,
-            "app_domain": null,
-            "gateway_replicas": 3,
-            "index_replicas": 3,
-            "ui_replicas": 3
+            "api_replicas": 1,
+            "app_domain": "apps.test-example.com",
+            "gateway_replicas": 1,
+            "index_replicas": 1,
+            "ui_replicas": 1
           }
         }
       ]
