Grant more monitoring rules
Add prometheuses, prometheusrules, alertmanager to allow create
application monitoring CRs.

Signed-off-by: Wayne Sun <gsun@redhat.com>

--- a/deploy/role.yaml
+++ b/deploy/role.yaml
@@ -42,10 +42,18 @@ rules:
 - apiGroups:
   - monitoring.coreos.com
   resources:
+  - alertmanagers
   - servicemonitors
+  - prometheuses
+  - prometheusrules
   verbs:
   - get
+  - list
   - create
+  - update
+  - delete
+  - deletecollection
+  - watch
 - apiGroups:
   - apps
   resourceNames:
