Add elasticsearch metrics support
Signed-off-by: Wayne Sun <gsun@redhat.com>

--- a/roles/reportportal/tasks/deploy_es.yml
+++ b/roles/reportportal/tasks/deploy_es.yml
@@ -17,3 +17,13 @@
   k8s:
     state: present
     definition: "{{ lookup('template', 'es-poddisruptionbudget.yaml.j2') | from_yaml }}"
+
+- name: Create elasticsearch metrics export deployment
+  k8s:
+    state: present
+    definition: "{{ lookup('template', 'es-metrics-deploy.yaml.j2') | from_yaml }}"
+
+- name: Create elasticsearch metrics service
+  k8s:
+    state: present
+    definition: "{{ lookup('template', 'es-metrics-service.yaml.j2') | from_yaml }}"
