Add servicemonitor for minio
Signed-off-by: Wayne Sun <gsun@redhat.com>

--- a/roles/reportportal/tasks/deploy_minio.yml
+++ b/roles/reportportal/tasks/deploy_minio.yml
@@ -36,3 +36,8 @@
   k8s:
     state: present
     definition: "{{ lookup('template', 'minio-service.yaml.j2') | from_yaml }}"
+
+- name: Create minio servicemonitor
+  k8s:
+    state: present
+    definition: "{{ lookup('template', 'minio-servicemonitor.yaml.j2') | from_yaml }}"
