Add servicemonitor for rabbitmq
Signed-off-by: Wayne Sun <gsun@redhat.com>

--- a/roles/reportportal/tasks/deploy_rabbitmq.yml
+++ b/roles/reportportal/tasks/deploy_rabbitmq.yml
@@ -47,3 +47,8 @@
   k8s:
     state: present
     definition: "{{ lookup('template', 'rabbitmq-rolebinding.yaml.j2') | from_yaml }}"
+
+- name: Create rabbitmq servicemonitor
+  k8s:
+    state: present
+    definition: "{{ lookup('template', 'rabbitmq-servicemonitor.yaml.j2') | from_yaml }}"
