--- a/deploy/crds/rp5.reportportal.io_v1alpha1_reportportal_cr.yaml
+++ b/deploy/crds/rp5.reportportal.io_v1alpha1_reportportal_cr.yaml
@@ -7,5 +7,7 @@ spec:
   app_domain: apps.test-example.com
   ui_replicas: 1
   api_replicas: 1
+  api_image: quay.io/waynesun09/service-api:5.2.0-rootless
+  uat_image: reportportal/service-authorization:5.2.0
   index_replicas: 1
   gateway_replicas: 1
