--- a/deploy/olm-catalog/reportportal-operator/0.0.2/reportportal-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/reportportal-operator/0.0.2/reportportal-operator.clusterserviceversion.yaml
@@ -240,6 +240,7 @@ spec:
           - delete
           - deletecollection
           - watch
+          - patch
         - apiGroups:
           - apps
           resourceNames:
