--- a/roles/reportportal/tasks/deploy_pg.yml
+++ b/roles/reportportal/tasks/deploy_pg.yml
@@ -1,3 +1,8 @@
+- name: Create postgresql restic custom init script configmap
+  k8s:
+    state: present
+    definition: "{{ lookup('template', 'pg-restic-configmap.yaml.j2') | from_yaml }}"
+
 - name: Create postgresql statefulset
   k8s:
     state: present
