Add the elasticsearch snapshot dir and bucket parameter
User could specify the snapshot dir and s3 bucket name for es
snapshot.

Signed-off-by: Wayne Sun <gsun@redhat.com>

--- a/roles/reportportal/defaults/main.yml
+++ b/roles/reportportal/defaults/main.yml
@@ -79,6 +79,8 @@ es_host: elasticsearch-master
 es_port: 9200
 
 # Elasticsearch s3 snapshot backup schedule
+es-s3-backup-dir: s3_backup
+es-snapshot-bucket: es-snapshot-123123
 es_backup_schedule: @daily
 
 # ReportPortal services values
