Update CSV version to 0.0.3
Update use latest build v0.0.3 image which include PostgresSQL and
Elasticsearch backup support.

Update Operator level to 'Full Lifecycle' as automatic backup
enabled.

Signed-off-by: Wayne Sun <gsun@redhat.com>

--- a/deploy/olm-catalog/reportportal-operator/manifests/reportportal-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/reportportal-operator/manifests/reportportal-operator.clusterserviceversion.yaml
@@ -55,16 +55,16 @@ metadata:
           }
         }
       ]
-    capabilities: Basic Install
+    capabilities: Full Lifecycle
     categories: Application Runtime
     certified: "false"
-    containerImage: quay.io/waynesun09/rp5-operator:v0.0.2
-    createdAt: "2020-04-23 20:09:00"
+    containerImage: quay.io/waynesun09/rp5-operator:v0.0.3
+    createdAt: "2020-06-26 10:30:00"
     description: ReportPortal is a test automation analytics platform. ReportPortal
       Operator for instantiating the Report Portal services and required dependencies.
     repository: https://github.com/waynesun09/reportportal-operator
     support: waynesun09
-  name: reportportal-operator.v0.0.2
+  name: reportportal-operator.v0.0.3
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -198,7 +198,7 @@ spec:
                 - /usr/local/bin/ao-logs
                 - /tmp/ansible-operator/runner
                 - stdout
-                image: quay.io/waynesun09/rp5-operator:v0.0.2
+                image: quay.io/waynesun09/rp5-operator:v0.0.3
                 imagePullPolicy: Always
                 name: ansible
                 resources: {}
@@ -219,7 +219,7 @@ spec:
                   value: reportportal-operator
                 - name: ANSIBLE_GATHERING
                   value: explicit
-                image: quay.io/waynesun09/rp5-operator:v0.0.2
+                image: quay.io/waynesun09/rp5-operator:v0.0.3
                 imagePullPolicy: Always
                 name: operator
                 resources: {}
@@ -392,5 +392,5 @@ spec:
   maturity: alpha
   provider:
     name: waynesun09
-  replaces: reportportal-operator.v0.0.1
-  version: 0.0.2
+  replaces: reportportal-operator.v0.0.2
+  version: 0.0.3
