Update roles with grant cronjobs batch permissions
Signed-off-by: Wayne Sun <gsun@redhat.com>

--- a/deploy/olm-catalog/reportportal-operator/manifests/reportportal-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/reportportal-operator/manifests/reportportal-operator.clusterserviceversion.yaml
@@ -345,6 +345,7 @@ spec:
           - batch
           resources:
           - jobs
+          - cronjobs
           verbs:
           - create
           - delete
