Add finalizer role to remove operands
When delete the Operator created custom resource, the finalizer
role will be run to clean operand resources.

By default will not remove Minio as it's used as the data backup
target.

Also the PVCs will not be removed by default.

Signed-off-by: Wayne Sun <gsun@redhat.com>

--- a/watches.yaml
+++ b/watches.yaml
@@ -3,3 +3,8 @@
   group: rp5.reportportal.io
   kind: ReportPortal
   role: /opt/ansible/roles/reportportal
+  finalizer:
+    name: finalizer.reportportal
+    role: /opt/ansible/roles/reportportal-remove
+    vars:
+      remove_minio: False
