--- a/roles/reportportal/defaults/main.yml
+++ b/roles/reportportal/defaults/main.yml
@@ -4,13 +4,13 @@
 
 # RP dependency services values
 # RabbitMQ deploy parameters
-deploy_rabbitmq: True
+deploy_rabbitmq: yes
 rabbitmq_image: docker.io/bitnami/rabbitmq:3.8.3-debian-10-r2
 rabbitmq_volume_size: 8Gi
 load_definition: "{{ lookup('template', 'load-definition.json') | to_json | string | b64encode }}"
 
 # RabbitMQ service default values
-# Update in vars if deploy_rabbitmq is False and use existing rabbitmq service
+# Update in vars if deploy_rabbitmq is no and use existing rabbitmq service
 rabbitmq_name: rabbitmq
 rabbitmq_host: rabbitmq
 rabbitmq_port: 5672
@@ -21,12 +21,12 @@ rabbitmq_apiport: 15672
 rabbitmq_secret: rabbitmq
 
 # PostgreSQL deploy parameters
-deploy_postgresql: True
+deploy_postgresql: yes
 db_storage_size: 8Gi
 pg_image: docker.io/bitnami/postgresql:11.7.0-debian-10-r9
 
 # PostgreSQL service default values
-# Update in vars if deploy_postgresql is False and use existing PostgreSQL service
+# Update in vars if deploy_postgresql is no and use existing PostgreSQL service
 rp_db: reportportal
 rp_db_user: postgres
 rp_db_password: lYHfhS2Hfy
@@ -41,13 +41,13 @@ pg_restic_password: rp_user
 pg_s3_bucket_name: pgbackup-123123
 
 # Minio deploy parameters
-deploy_minio: True
+deploy_minio: yes
 minio_image: minio/minio:RELEASE.2019-08-07T01-59-21Z
 minio_storage_size: 10Gi
 cloud_replicas: 4
 
 # Mino service default values
-# Update in vars if deploy_minio is False and use existing Minio service
+# Update in vars if deploy_minio is no and use existing Minio service
 minio_endpoint: http://minio:9000
 accesskey: AKIAIOSFODNN7EXAMPLE
 secretkey: wJalrXUtnFEMI/K7MDENG/bPxRfiCYEXAMPLEKEY
@@ -68,13 +68,13 @@ oss_enabled: false
 oss_endpoint: ""
 
 # Elasticsearch deploy parameters
-deploy_elasticsearch: True
+deploy_elasticsearch: yes
 es_replicas: 1          # need update to 3 for ha
-es_storage_size: 10Gi   # better 2update to 30
+es_storage_size: 10Gi   # better update to 30
 es_image: quay.io/waynesun09/elasticsearch:7.6.1-s3-plugin
 
 # Elasticsearch service default values
-# Update in vars if deploy_elasticsearch is False and use existing Elasticsearch service
+# Update in vars if deploy_elasticsearch is no and use existing Elasticsearch service
 es_host: elasticsearch-master
 es_port: 9200
 
