--- a/watches.yaml
+++ b/watches.yaml
@@ -7,4 +7,4 @@
     name: finalizer.reportportal
     role: /opt/ansible/roles/reportportal-remove
     vars:
-      remove_minio: False
+      remove_minio: no
